elements/login-box/login-box.scss
@import '../styleguide';

login-box {
  float: left;
  padding: 0 0 0 20px;
  #anonymous {
    a {
      @extend %bodytext-large-font;
      color: $white;
      font-weight: 600;
      line-height: 30px;
    }
  }
  #loggedin {
    background: $white;
    @extend %nano-radius;
    overflow: hidden;
    .profile a {
      padding: 5px;
      color: $bodyTextColor;
      display: block;
      span {
        background: $greyColor80;
        @extend %nano-radius;
        height: 20px;
        width: 20px;
        float: left;
        margin: 0 19px 0 0;
        position: relative;
        &:after{
          content: '';
          border-left: 5px solid transparent;
          border-right: 5px solid transparent;
          border-top: 5px solid $bodyTextColor;
          display: block;
          width: 0;
          height: 0;
          position: absolute;
          top: 8px;
          right: -13px;
        }
        img {
          max-width: 100%;
          @extend %nano-radius;
        }
      }
      strong{
        @extend %main-font;
        line-height: 20px;
        font-size: 12px;
        font-weight: 400;
        float: right;
        opacity: 0;
        display: none;
        @extend %anime
      }
    }
    ul{
      display: none;
      @extend %bodytext-font, %stripped;
      line-height: 24px;
      padding: 5px 0 6px 0;
      position: relative;
      &:before {
        content: '';
        position: absolute;
        top: 0;
        left: -20%;
        width: 140%;
        height: 1px;
        background: $greyColor80;
        display: block;
      }
      li a{
        color: $secondaryColor100;
        &:hover{
          text-decoration: underline;
        }
      }
    }
    &:hover {
      @extend %anime;
      position: absolute;
      a{
        padding: 5px 10px;
        strong{
          display: block;
          opacity: 1;
        }
      }
      ul {
        display: block;
      }
    }
  }
}

